<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SYLF</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="show_actors_label">Actors</string>
    <string name="show_directors_invalid_field_error">Field Directors is invalid.</string>
    <string name="show_directors_label">Directors</string>
    <string name="show_empty_list">Show list is empty !</string>
    <string name="show_error_create">Show creation error…</string>
    <string name="show_error_edit">Show edition error…</string>
    <string name="show_genres_dialog_title">Select genres</string>
    <string name="show_genres_invalid_field_error">Field Genres is invalid.</string>
    <string name="show_genres_label">Genres</string>
    <string name="show_not_found">No Show found to display…</string>
    <string name="show_plot_invalid_field_error">Field Plot is invalid.</string>
    <string name="show_plot_label">Plot</string>
    <string name="show_poster_invalid_field_error">Field Poster is invalid.</string>
    <string name="show_poster_label">Poster</string>
    <string name="show_progress_load_message">Show is loading…</string>
    <string name="show_progress_load_relations_message">Show related entities are loading...</string>
    <string name="show_progress_load_relations_title">Show related entities loading</string>
    <string name="show_progress_load_title">Show Loading progress</string>
    <string name="show_progress_save_message">Show is saving to database…</string>
    <string name="show_progress_save_title">Show save progress</string>
    <string name="show_released_invalid_field_error">Field Released is invalid.</string>
    <string name="show_released_label">Released</string>
    <string name="show_runtime_invalid_field_error">Field Runtime is invalid.</string>
    <string name="show_runtime_label">Runtime</string>
    <string name="show_seasons_label">Seasons</string>
    <string name="show_title_invalid_field_error">Field Title is invalid.</string>
    <string name="show_title_label">Title</string>
    <string name="show_writers_invalid_field_error">Field Writers is invalid.</string>
    <string name="show_writers_label">Writers</string>
    <string name="random">Random</string>
    <string name="pref">Preferences</string>
    <string name="category">Category</string>
    <string name="profil">Profil</string>
    <string name="pref_date_diffusion">Période de diffusion</string>
    <string name="pref_genre">Genre</string>
    <string name="pref_popularite">Popularité</string>
    <string name="pref_note">Bien noté</string>
    <string name="pref_date_de">De</string>
    <string name="pref_date_a">a</string>
    <string name="pref_doesnt_matter">Peu importe</string>
    <string name="pref_title">Renseigner vos préférences</string>
    <string name="top_rated">Top Rated</string>
    <string name="title_logo">NATIONAL GEOGRAPHIC</string>
    <string name="btn_skip_intro">Skip Intro</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

</resources>