<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/show_data_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp" >

            <LinearLayout
                    android:id="@+id/layout_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/android_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:cropToPadding="true"
                    android:src="@drawable/ic_launcher" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/show_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="true" />

                    <TextView
                        android:id="@+id/show_runtime_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_runtime_label" />

                    <TextView
                        android:id="@+id/show_runtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/show_runtime_label"
                        android:textIsSelectable="true" />

                    <TextView
                        android:id="@+id/show_released_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/show_runtime"
                        android:text="@string/show_released_label" />

                    <TextView
                        android:id="@+id/show_released"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/show_released_label"
                        android:textIsSelectable="true" />

                    <TextView
                        android:id="@+id/show_actors_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/show_released"
                        android:text="@string/show_actors_label" />

                    <TextView
                        android:id="@+id/show_actors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/show_actors_label"
                        android:textIsSelectable="true" />

                    <TextView
                        android:id="@+id/show_writers_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/show_actors"
                        android:text="@string/show_writers_label" />

                    <TextView
                        android:id="@+id/show_writers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/show_writers_label"
                        android:textIsSelectable="true" />

                    <TextView
                        android:id="@+id/show_directors_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/show_writers"
                        android:text="@string/show_directors_label" />

                    <TextView
                        android:id="@+id/show_directors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/show_directors_label"
                        android:textIsSelectable="true" />

                    <TextView
                        android:id="@+id/show_poster_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/show_directors"
                        android:text="@string/show_poster_label" />

                    <TextView
                        android:id="@+id/show_poster"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/show_poster_label"
                        android:textIsSelectable="true" />

                    <TextView
                        android:id="@+id/show_genres_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/show_poster"
                        android:text="@string/show_genres_label" />

                    <TextView
                        android:id="@+id/show_genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/show_genres_label"
                        android:textIsSelectable="true" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/layout_description">

                <TextView
                    android:id="@+id/show_plot_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/show_title"
                    android:text="@string/show_plot_label" />

                <TextView
                    android:id="@+id/show_plot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/show_plot_label"
                    android:textIsSelectable="true" />
            </LinearLayout>
            
                 <LinearLayout
                android:id="@+id/layout_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/layout_synopsis">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Notre avis" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:text="Critique numéro 1 2 3" />
            </LinearLayout>
            
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/show_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/show_not_found"
        android:visibility="gone" />

</LinearLayout>