<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/pref_title"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/card"
            android:orientation="vertical"
            android:paddingBottom="20dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_title"
                android:drawableBottom="#e74f3f"
                android:paddingBottom="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/pref_date_diffusion"
                android:textColor="#e74f3f"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/doesnt_matter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/pref_doesnt_matter" />

            <RelativeLayout
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="8dp" >

                <TextView
                    android:id="@+id/date_de"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/pref_date_de"
                    android:textAllCaps="true" />

                <Spinner
                    android:id="@+id/start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@id/date_de" />

                <TextView
                    android:id="@+id/date_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@id/start_date"
                    android:text="@string/pref_date_a"
                    android:textAllCaps="true" />

                <Spinner
                    android:id="@+id/end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/date_a" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/card"
            android:orientation="vertical"
            android:paddingBottom="20dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_title"
                android:drawableBottom="#e74f3f"
                android:paddingBottom="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/pref_genre"
                android:textColor="#e74f3f"
                android:textSize="20sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:paddingLeft="8dp" >
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/card"
            android:orientation="vertical"
            android:paddingBottom="20dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_title"
                android:drawableBottom="#e74f3f"
                android:paddingBottom="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/pref_popularite"
                android:textColor="#e74f3f"
                android:textSize="20sp" />
            
            
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:paddingLeft="8dp" >
                
                    <CheckBox 
                    android:id="@+id/cb_popularite"/>
                    <CheckedTextView
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
                    android:text="@string/pref_popularite"
                    android:layout_toRightOf="@id/cb_popularite" />
                </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>