<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/show_data_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/show_backdrop_path"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:id="@+id/layout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/show_backdrop_path"
                android:layout_margin="10dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/show_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:cropToPadding="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/show_poster"
                    android:orientation="vertical"
                    android:paddingLeft="12dip" >

                    <TextView
                        android:id="@+id/show_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="true"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/show_runtime_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_runtime_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/show_runtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dip"
                        android:textIsSelectable="true" />

                    <TextView
                        android:id="@+id/show_released_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_released_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/show_released"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dip"
                        android:textIsSelectable="true" />

                    <TextView
                        android:id="@+id/show_writers_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_writers_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/show_writers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dip"
                        android:textIsSelectable="true" />

                    <TextView
                        android:id="@+id/show_genres_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_genres_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/show_genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dip"
                        android:textIsSelectable="true" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_description"
                android:layout_margin="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/show_plot_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/show_title"
                    android:text="@string/show_plot_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/show_plot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/show_plot_label"
                    android:textIsSelectable="true" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/show_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/show_not_found"
        android:visibility="gone" />

</LinearLayout>